<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/news_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/ListStyle"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1"
        tools:listitem="@layout/item_article"/>

    <include layout="@layout/empty_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_safe_distance"
        tools:visibility="gone"/>

    <include layout="@layout/error_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_safe_distance"
        tools:visibility="gone"/>

</LinearLayout>